[gd_scene load_steps=4 format=3 uid="uid://darctcym27gxw"]

[ext_resource type="Script" path="res://src/player/player.gd" id="1_2i37v"]
[ext_resource type="PackedScene" uid="uid://bkoywto1m04ei" path="res://src/player/sword.tscn" id="2_33khs"]

[sub_resource type="BoxMesh" id="BoxMesh_dryf3"]
size = Vector3(0.1, 0.1, 0.1)

[node name="Player" type="Node3D"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
script = ExtResource("1_2i37v")

[node name="Blocks" type="Node3D" parent="."]

[node name="BaseBlock" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_dryf3")

[node name="Head" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)

[node name="KinectOffs" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="LHelp" type="Node3D" parent="."]

[node name="SwordLeft" parent="LHelp" instance=ExtResource("2_33khs")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)

[node name="RHelp" type="Node3D" parent="."]

[node name="SwordRight" parent="RHelp" instance=ExtResource("2_33khs")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
